Fix Dark Mode Style Issues

--- a/core/static/core/css/style.css
+++ b/core/static/core/css/style.css
@@ -700,7 +700,8 @@ ul.dropdown-menu li {
 .our-team {
   text-align: center;
   outline: none;
-  box-shadow: 0px -1px 24px -9px rgba(0,0,0,0.46);
+  -webkit-box-shadow: 0px 0px 6px -1px rgba(0,0,0,0.92); 
+box-shadow: 0px 0px 6px -1px rgba(0,0,0,0.92);
 }
 
 .our-team .team_img {
@@ -777,7 +778,7 @@ ul.dropdown-menu li {
 .our-team .title {
   font-size: 18px;
   font-weight: bold;
-  color: #2a4284;
+  color: var(--text-color);
   text-transform: capitalize;
   margin: 0 0 20px;
   position: relative;
@@ -830,7 +831,7 @@ ul.dropdown-menu li {
 .our-team .post {
   display: inline-block;
   font-size: 15px;
-  color: #1b262c;
+  color: var(--text-color);
   text-transform: capitalize;
 }
 
